	- block screen saver also on full screen when only audio is playing,
	- add sharpness to video adjustment (OpenGL2 and VDPAU only),
	- add key bindings (currently only in settings file),
	- sort current group instead of entire playlist,
	- rename video equalizer -> video adjustment,
	- fix bug in tag editor (non-Windows OS'es),
	- fix downloading cover art from Last FM,
	- move OpenGL2 shaders to resources,
	- handle multimedia keys on Windows,
	- add sharpness shader to OpenGL2,
	- move online contents to GitHub,
	- add contributors tab,

Changes in QMPlay2 build 16.07.07:
	- Ubuntu Unity integration (MPRIS2 and shortcut groups),
	- added video equalizer to "Settings/Video filters",
	- new "Concept" icons by Alexey Varfolomeev,
	- updated Russian translation (victorr2007),
	- properly add many files containing tracks,
	- better detection of subtitles text codec,
	- handle audio parameters changes,
	- MPRIS2, CMake and PLS fixes,

Changes in QMPlay2 build 16.07.02:
	- update pause and buffered data information when demuxer is busy,
	- move "modules" directory from "share/qmplay2" to "lib/qmplay2",
	- allow file group and Audio CD tracks synchronization:
		- synchronize automatically when loading the same playlist into a group,
		- synchronize automatically when loading Audio CD tracks,
		- on "F5" key,
	- show more warnings in VDPAU and appearance settings,
	- fixed color in graphics subtitles (e.g. dvdsub),
	- reading files doesn't depend on FFmpeg module,
	- hide mouse cursor when cover image is visible,
	- updated Russian translation (victorr2007),
	- allow mouse wheel to change the volume,
	- show blurred covers as a background,
	- added CMake build (Zamarin Arthur),
	- OpenGL2 now uses PBO if available,
	- bugfix,

Changes in QMPlay2 build 16.06.01:
	- diplaying and filtering all planar 8-bit YUV pixel formats (only OpenGL2 and QPainter video outputs)
	- allow to display only file names in playlist,
	- update Russian translation (victorr2007),