@@ -3,6 +3,7 @@ Exec=QMPlay2 --enqueue %F
 Icon=QMPlay2
 Name=Enqueue in QMPlay2
 Name[pl]=Kolejkuj w QMPlay2
+Name[ru]=Добавить в очередь QMPlay2
 StartupNotify=false
 Type=Application
 Categories=Qt;AudioVideo;Player;Audio;Video;
