@@ -8,6 +8,7 @@ Changes in QMPlay2 build 16.07.15:
 	- sort current group instead of entire playlist,
 	- rename video equalizer -> video adjustment,
 	- fix bug in tag editor (non-Windows OS'es),
+	- updated Russian translation (victorr2007),
 	- fix downloading cover art from Last FM,
 	- move OpenGL2 shaders to resources,
 	- handle multimedia keys on Windows,
